Mon Aug 16 19:23:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_dtoa, ruby_hdtoa): use same representations for
	  Infinity and NaN.  a part of a patch from Peter Weldon at
	  [ruby-core:31725].

	* util.c (ruby_hdtoa): fixed buffer overrun.  based on a patch
	  from Peter Weldon at [ruby-core:31725].

Mon Aug 16 17:44:55 2010  Tanaka Akira  <akr@fsij.org>

	* common.mk (capi): use -b option for doxygen.  It disables stdout
	  buffering and prevents wrong reordering between stdout and stderr
	  even when the output of "make" is redirected.

Sun Aug 15 19:59:58 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/webrick/httpresponse.rb (WEBrick::HTTPResponse#set_error):
	  Fix for possible cross-site scripting (CVE-2010-0541).
	  Found by Apple, reported by Hideki Yamane.
	  Patch by Hirokazu Nishio <nishio.hirokazu AT gmail.com>.

Mon Aug 16 12:29:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, win32/Makefile.sub (test-rubyspec-precheck): split
	  from test-rubyspec.

	* common.mk (test-rubyspec): moved from Makefile.in.

Mon Aug 16 10:00:45 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.h (llabs): never never never never never
	  use "long long".

	* ext/bigdecimal.bigdecimal.c (BigDecimal_to_i): get rid of a warning.

Sun Aug 15 18:14:20 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_dump, BigDecimal_inspect,
	  VPrint, VpToString, VpVarCheck): use PRIuSIZE, PRIdSIZE, PRIdVALUE,
	  and PRIxVALUE.

Sun Aug 15 16:14:31 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (Logging.postpone): close @log only when it's available.

Sun Aug 15 13:30:35 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.h (VpVtoD): fix a type of e.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_dump, BigDecimal_inspect):
	  fix format for size_t.

Sun Aug 15 00:22:00 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/extconf.rb, ext/bigdecimal/bigdecimal.h